Updated the gantt with some improvements

--- a/force-app/main/default/lwc/gantt/gantt.html
+++ b/force-app/main/default/lwc/gantt/gantt.html
@@ -1,3 +1,32 @@
 <template>
+    <div style="width: 30%; padding-bottom: 4px; padding-right: 8px; display: inline-block">
+        <lightning-combobox
+            name="group_filter"
+            label="Project Type"
+            value={groupValue}
+            placeholder="Select Project Type"
+            options={groupOptions}
+            onchange={handleGroupChange}>
+        </lightning-combobox>
+    </div>
+    <div style="width: 30%; padding-bottom: 4px; padding-right: 8px; display: inline-block">
+        <lightning-combobox
+            name="scale_filter"
+            label="Time Scale"
+            value={scaleValue}
+            placeholder="Select Scale"
+            options={scaleOptions}
+            onchange={handleScaleChange}>
+        </lightning-combobox>
+    </div>
+    <div style="width: 10%; padding-bottom: 4px; display: inline-block">
+        <lightning-button-icon
+            name="refresh_chart"
+            icon-name="utility:refresh"
+            alternative-text="Refresh Chart"
+            title="Refresh Chart"
+            onclick={handleRefreshClick}>
+        </lightning-button-icon>
+    </div>
     <div class="thegantt" lwc:dom="manual" style='width: 100%;'></div>
 </template>
